Menu funcional case 2 con ViewPager y transicion funcionando

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="action_example">Example action</string>
     <string name="title_activity_drawer">DrawerActivity</string>
 
+
+    <string name="drawer_open">Open drawer</string>
+    <string name="drawer_close">Close drawer</string>
+
 </resources>
