Funciona SearchResult abriendo otra actividad y obteniendo el String

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="caracteri">Características del espacio</string>
 
 
+    <string name="search_hint">Tu espacio</string>
 
 
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget urna elementum, pharetra ante ac, elementum neque. Curabitur a leo eu risus consectetur vulputate non id purus. Praesent mattis libero vel enim auctor facilisis. Proin vestibulum blandit magna et egestas. In tristique diam. </string>
